# bank-data-simulator

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  implementation-spec.md  main.py  pyproject.toml
config/: constants.py  events.py  personas.py  simulation.py
features/: build_features.sql
generator/: accounts.py  activity.py  branches.py  cards.py  churn.py  complaints.py  customers.py  digital.py  feedback.py  labels.py  loans.py  products.py  spine.py  transactions.py
pipeline/: loader.py  schema.sql  simulate.py  validate.py  verify_parity.py  writer.py
profiling/: line_profile_run.py  profile_run.py
tests/: test_churn.py  test_events.py  test_personas.py  test_schema.py  test_simulation.py  test_simulation_pipeline.py  test_spine.py  test_sql_features.py  test_static_generators.py
